--- a/source/frontend/src/app/components/preview-grid/preview-grid.component.scss
+++ b/source/frontend/src/app/components/preview-grid/preview-grid.component.scss
@@ -2,7 +2,6 @@
 
 mat-grid-list {
   margin: 10px;
-  width: 98%;
 }
 
 mat-grid-tile {
